Started working on As a user I want to be able to do transactions
